refactor: collect를 toList으로 변경